0.23.2 "Yellow trees" - yyyy/mm/dd
----------------------------------
Maintenance release.

 * qshelve:
   * New command line option --all to start with all changes selected.
     (Sveinung Kvilhaugsvik, Bug #1227914)
   * New command line option --message (-m) to set the message string.
     (Sveinung Kvilhaugsvik, Bug #1233909)


0.23.1 - 2013/07/29
-------------------
Maintenance release.

 * qannotate:
   * option --line=N: properly activate the first line and a line with
     uncommitted changes. (Alexander Belchenko)
 * qcommit:
   * Better support of cancel commit for foreign branches (git/svn/etc).
     (Bug #1030343, Jared Silva, Jelmer Vernooij)
 * qconfig:
   * Fix: Fails to modify or remove merge tool configuration. 
     (IWATA Hidetaka, Bug #1045827)
 * qlog:
   * Support for FusionForge bug tracker. (Jérémy Subtil, Bug #1072044)
   * Support for Jira bug tracker. (Craig Hewetson, Bug #1189421)
   * Support for Flyspray bug tracker URLs (2 styles). (Alexander Belchenko)
   * Hack for Vista/Win7 aero style: selected rows should use black text
     color. (Alexander Belchenko, Bug #790590)
   * Workaround for date column width problem on Windows Vista and higher 
     (1 pixel miscalculation). (Alexander Belchenko, Bug #430502)


0.23.0 "Birch" - 2012/07/12
---------------------------
What's new in this release:

QBzr 0.23 is companion release for bzr 2.6, and compatible with bzr 2.5.

Behavior change: External diff behavior is changed as below.(IWATA Hidetaka)
 1. When calling external diff for multiple files, all diffs shown at once.(Bug #942218)
 2. Working tree or branch is locked only when starting up of diff tools.(Bug #942221)
This affects to all commands which use external diff. 
(qdiff, qcommit, qbrowse, qannotate, ...)

Now, you can launch 'Shelve' directly from each dialog when uncommitted change blocks action.
And you can launch 'Resolve' directly when conflicts generated. (IWATA Hidetaka #935903)
